2019-02-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m: Fix encoded word encoding specifier
	 to be uppercase ('B' or 'Q') as pere strict RFC specification.
	* Tests/base/GSMime/build.m: Add testcase for correct encoding.

2019-02-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Tests/base/GSTLS/basic.m: Update testcase to use correct guard.

2019-02-12  Ivan Vucica <ivan@vucica.net>

	* Headers/GNUstepBase/GSTLS.h: Change guard to check for value of
	GS_USE_GNUTLS and not for its defined state. This preprocessor
	constant might be defined with a zero value indicating desire not to
	use GnuTLS, which would still pass the old check.

2019-02-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Improve thread safety with NSZombie particularly
	on startup/shutdown; be more careful about locking access to the
	zombieMap and also ensuring we don't raise an exception inside the
	locked sections (by passing a nil map to the functions).

2019-01-06  Armando Pesenti Gritti <armando.pesentigritti@theengagehub.com>

	* Headers/GNUstepBase/GSTLS.h: Header moved to provide public
	exposure of TLS classes giving ObjC interface to GNU TLS.
	* Source/GSTLS.m: New methods to provide certificate expiry times.
	* Source/DocMakefile: Make documentation from GSTLS.h
	* Source/GNUmakefile: Install GSTLS.h
	* Source/GSHTTPURLHandle.m: Adjust location of GSTLS header
	* Source/GSSocketStream.m: Adjust location of GSTLS header
	* Source/NSFileHandle.m: Adjust location of GSTLS header
	* Source/NSURLProtocol.m: Adjust location of GSTLS header
	* Tests/base/GSTLS: Add tests for certificate expiry
	Patch by Armando, adjusted  by RFM.

2019-01-06  Fred Kiefer <fredkiefer@gmx.de>

	* Source/Additions/Unicode.m: Move variable u to the correct scope
	and initialize it.

2019-01-06  Ivan Vucica <ivan@vucica.net>

	* ANNOUNCE:
	* NEWS:
	* Documentation/ReleaseNotes.gsdoc:
	* Documentation/news.texi:
	Update release notes for 1.26.0.
	* Version: